--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav ul li a {
   font-size: 45px;
   font-weight: 700;
 }
-.feature-left-description {
+.feature-left-description, .facts-description {
   color: var(--Dark-03, #727272);
   font-size: 16px;
   font-weight: 400;
@@ -125,6 +125,54 @@ nav ul li a {
    font-size: 25px;
    font-weight: 500;
    line-height: 40px;
+}
+.facts{
+    padding-top: 200px;
+    padding-left: 120px;
+}
+.facts-title{
+    color: var(--Dark-01, #131313);
+    font-size: 45px;
+    font-weight: 700;
+}
+.icon{
+    display: flex;
+    padding: 140px 150px;
+    justify-content: space-between;
+}
+.sponsors-title{
+    color: var(--Dark-01, #131313);
+    font-size: 45px;
+     font-weight: 700;
+     text-align: center;
+}
+.sponsor-description{
+    color: var(--Dark-03, #727272);
+text-align: center;
+
+font-size: 16px;
+;
+font-weight: 400;
+line-height: 26px; 
+}
+.sponsor-team{
+    display: flex;
+    justify-content: space-between;
+    padding: 120px;
+}
+footer{
+    border-radius: 8px;
+background: #FFF4E7;
+color: var(--Dark-02, #424242);
+text-align: center;
+
+font-size: 20px;
+
+font-weight: 400;
+width: 100%;
+height: 130px;
+padding-top:50px;
+
 }
 /* media queries */
 @media screen and (max-width: 576px) {
